finished to-do list, not finished draft

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -136,9 +136,9 @@ Sequence properties that can be analysed by bioinformatics, the sequence complex
 Those findings demonstrated that the sequence of the \gls{tmh} holds valuable information regarding biological roles, and forms the basis of our interest in the link between the polarity of a helix and functional activity beyond structural anchorage.
 
 TMSOC's z-score is able to distinguish between functionally active~\gls{tmh}s and those only associated with anchorage~\cite{Wong2012}.
-The z-score is a product of both hydrophobicity and a Shannon like sequence entropy of the character string in the~\gls{tmh}. This term is described below in equation~\ref{zscoreterm}.
+The z-score is a product of both hydrophobicity and a Shannon like sequence entropy of the character string in the~\gls{tmh}. This term is described below in equation~\ref{equation:zscoreterm}.
 
-\begin{equation} \label{zscoreterm}
+\begin{equation} \label{equation:zscoreterm}
 z({x}_{\Phi},{x}_{c})={(-1)}^{s}\left[\frac{{({x}_{\Phi}-{\mu}_{\Phi})}^{2}}{{\sigma}_{\phi}^{2}}+\frac{{({x}_{c}-{\mu}_{c})}^{2}}{{\sigma}_{c}^{2}}\right]
 \end{equation}
 
